// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppearanceFooterButtons should render 1`] = `
<DocumentFragment>
  <div
    class="flex justify-end mt-8 space-x-3 w-full"
  >
    <button
      class="OriginalButton__StyledButton-sc-o0fs2j-0 jfKZOY"
      data-testid="AppearanceFooterButtons__cancel"
      type="button"
    >
      <div
        class="flex relative items-center space-x-2"
      >
        Cancel
      </div>
    </button>
    <button
      class="OriginalButton__StyledButton-sc-o0fs2j-0 jVYfXJ"
      data-testid="AppearanceFooterButtons__save"
      type="submit"
    >
      <div
        class="flex relative items-center space-x-2"
      >
        Save
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`AppearanceFooterButtons should render disabled 1`] = `
<DocumentFragment>
  <div
    class="flex justify-end mt-8 space-x-3 w-full"
  >
    <button
      class="OriginalButton__StyledButton-sc-o0fs2j-0 jfKZOY"
      data-testid="AppearanceFooterButtons__cancel"
      type="button"
    >
      <div
        class="flex relative items-center space-x-2"
      >
        Cancel
      </div>
    </button>
    <button
      class="OriginalButton__StyledButton-sc-o0fs2j-0 kvIYgy"
      data-testid="AppearanceFooterButtons__save"
      disabled=""
      type="button"
    >
      <div
        class="flex relative items-center space-x-2"
      >
        Save
      </div>
    </button>
  </div>
</DocumentFragment>
`;
